@@ -1,6 +1,13 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  04 Jan 2007; Roy Marples <uberlord@gentoo.org>:
+
+    Add a new carrier_timeout_eth0 setting just for Intel e1000 users on
+    FreeBSD where the carrier takes far too long to come up at boot.
+    This is very likely a hardware problem as Linux users have reported
+    similar issues with netplug/ifplugd which does the same thing here.
+
   03 Jan 2007; Roy Marples <uberlord@gentoo.org>:
 
     FreeBSD users can now specify a kernel dump device in conf.d/localmount
